force-app/main/default/objects/Calendar_Event__c/Calendar_Event__c.object-meta.xml
<CustomObject>
    <description>Stores individual events that belong to a team calendar</description>
    <label>Calendar Event</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calendar Events</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>