force-app/main/default/objects/Calendar_Event__c/fields/All_Day__c.field-meta.xml
<CustomField>
    <fullName>All_Day__c</fullName>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Indicates wether the event lasts all day.</description>
    <inlineHelpText>Check this box if the event does not use specific start and end times.</inlineHelpText>
    <label>All Day</label>
</CustomField>