force-app/main/default/objects/Calendar_Event__c/fields/Appointment_Type__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Type__c</fullName>
    <type>Picklist</type>
    <description>Classifies the scheduling workflow for a Team Calendar event.</description>
    <inlineHelpText>Choose whether this event is personal, internal, customer-facing, or part of a follow-up cadence.</inlineHelpText>
    <label>Appointment Type</label>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Personal</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Follow-Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>