force-app/main/default/objects/Calendar_Event__c/fields/Calendar__c.field-meta.xml
<CustomField>
    <fullName>Calendar__c</fullName>
    <type>Lookup</type>
    <description>Links this event to its parent team calendar.</description>
    <inlineHelpText>Choose the calendar this event belongs to.</inlineHelpText>
    <label>Calendar</label>
    <referenceTo>Team_Calendar__c</referenceTo>
    <relationshipLabel>Calendar Events</relationshipLabel>
    <relationshipName>Calendar_Events</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>