force-app/main/default/objects/Calendar_Event__c/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <label>Customer Account</label>
    <description>Optional account linked to the appointment.</description>
    <inlineHelpText>Link the event to the customer account when the appointment is customer-facing.</inlineHelpText>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Calendar Events</relationshipLabel>
    <relationshipName>CalendarEventsAsCustomerAccount</relationshipName>
    <type>Lookup</type>
</CustomField>