force-app/main/default/objects/Calendar_Event__c/fields/Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact__c</fullName>
    <label>Customer Contact</label>
    <description>Optional contact linked to the appointment.</description>
    <inlineHelpText>Link the event to the customer contact when the appointment is customer-facing.</inlineHelpText>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Calendar Events</relationshipLabel>
    <relationshipName>CalendarEventsAsCustomerContact</relationshipName>
    <type>Lookup</type>
</CustomField>