force-app/main/default/objects/Calendar_Event__c/fields/End__c.field-meta.xml
<CustomField>
    <fullName>End__c</fullName>
    <type>DateTime</type>
    <description>End date and time of the event</description>
    <inlineHelpText>Select the date and time when the event ends.</inlineHelpText>
    <required>true</required>
    <label>End</label>
</CustomField>