force-app/main/default/objects/Calendar_Event__c/fields/External_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Event_Id__c</fullName>
    <label>External Event Id</label>
    <type>Text</type>
    <length>255</length>
</CustomField>