force-app/main/default/objects/Calendar_Event__c/fields/Google_Source_Calendar_Id__c.field-meta.xml
<CustomField>
    <fullName>Google_Source_Calendar_Id__c</fullName>
    <label>Google Source Calendar Id</label>
    <type>Text</type>
    <length>255</length>
</CustomField>