force-app/main/default/objects/Calendar_Event__c/fields/Is_Recurrence_Exception__c.field-meta.xml
<CustomField>
    <fullName>Is_Recurrence_Exception__c</fullName>
    <description>True when this record is an exception to a recurring series — either an override of specific occurrence details or a tombstone record representing a deleted occurrence.</description>
    <defaultValue>false</defaultValue>
    <label>Is Recurrence Exception</label>
    <type>Checkbox</type>
</CustomField>