force-app/main/default/objects/Calendar_Event__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Additional notes or details for the event.</description>
    <inlineHelpText>Enter any extra details users should see for this event.</inlineHelpText>
    <label>Notes</label>
</CustomField>