force-app/main/default/objects/Calendar_Event__c/fields/Occurrence_Date__c.field-meta.xml
<CustomField>
    <fullName>Occurrence_Date__c</fullName>
    <description>For recurrence exception records, stores the original occurrence date (YYYY-MM-DD) that this record overrides or tombstones.</description>
    <label>Occurrence Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>