force-app/main/default/objects/Calendar_Event__c/fields/Private_To_Owner__c.field-meta.xml
<CustomField>
    <fullName>Private_To_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Keeps the event visible only to its owner inside Team Calendar views.</description>
    <inlineHelpText>Used by Team Calendar to keep self-only personal events from appearing on other users' calendar views.</inlineHelpText>
    <label>Private To Owner</label>
    <type>Checkbox</type>
</CustomField>