force-app/main/default/objects/Calendar_Event__c/fields/Recurrence_Parent__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Parent__c</fullName>
    <description>Lookup to the parent Calendar Event that is the template/root of the recurrence series. Null on the parent itself; set on exception records.</description>
    <label>Recurrence Parent</label>
    <referenceTo>Calendar_Event__c</referenceTo>
    <relationshipLabel>Recurrence Exceptions</relationshipLabel>
    <relationshipName>Recurrence_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>