force-app/main/default/objects/Calendar_Event__c/fields/Recurrence_Rule__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Rule__c</fullName>
    <description>RRULE string (RFC 5545) that defines the recurrence pattern for this event series, e.g. FREQ=WEEKLY;BYDAY=MO,WE,FR;COUNT=10</description>
    <label>Recurrence Rule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>