force-app/main/default/objects/Calendar_Event__c/fields/Reminder_Offset_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Offset_Minutes__c</fullName>
    <type>Picklist</type>
    <description>Stores the preferred reminder lead time for the calendar event.</description>
    <inlineHelpText>Choose how far in advance the appointment should be flagged for reminder workflows.</inlineHelpText>
    <label>Reminder Preference</label>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <label>No reminder</label>
                <default>true</default>
            </value>
            <value>
                <fullName>15 Minutes</fullName>
                <label>15 minutes before</label>
            </value>
            <value>
                <fullName>30 Minutes</fullName>
                <label>30 minutes before</label>
            </value>
            <value>
                <fullName>1 Hour</fullName>
                <label>1 hour before</label>
            </value>
            <value>
                <fullName>1 Day</fullName>
                <label>1 day before</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>