force-app/main/default/objects/Calendar_Event__c/fields/Reminder_Sent_At__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Sent_At__c</fullName>
    <type>DateTime</type>
    <description>Tracks when the reminder task was last created for this calendar event.</description>
    <inlineHelpText>Used by Team Calendar reminder automation to prevent duplicate reminder tasks.</inlineHelpText>
    <label>Reminder Sent At</label>
</CustomField>