force-app/main/default/objects/Calendar_Event__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <type>DateTime</type>
    <description>Start date and time of the event.</description>
    <inlineHelpText>Select the date and time when the event begins</inlineHelpText>
    <required>true</required>
    <label>Start</label>
</CustomField>