force-app/main/default/objects/Calendar_Event__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <type>Picklist</type>
    <description>Current status of the event.</description>
    <inlineHelpText>Select the current event status.</inlineHelpText>
    <required>true</required>
    <label>Status</label>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <sorted>true</sorted>
        </valueSetDefinition>
    </valueSet>
</CustomField>