force-app/main/default/objects/Calendar_Event__c/fields/Sync_Source__c.field-meta.xml
<CustomField>
    <fullName>Sync_Source__c</fullName>
    <label>Sync Source</label>
    <type>Text</type>
    <length>50</length>
</CustomField>